Removed title from the footer

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Strimzi - Apache Kafka on OpenShift and Kubernetes
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Strimzi provides a way to run an Apache Kafka cluster on Kubernetes or OpenShift in various deployment configurations.
+  Strimzi provides a way to run an Apache Kafka cluster on OpenShift and Kubernetes in various deployment configurations.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://strimzi.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: strimziio
