Hide older downloads and documentation from the main page

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,6 +5,12 @@ header:
   - url: /roadmap
     title: Roadmap
     identifier: roadmap
+  - url: /documentation
+    title: Documentation
+    identifier: documentation
+  - url: /downloads
+    title: Downloads
+    identifier: downloads
   - url: /blog
     title: Blog
     identifier: blog
