--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -14,3 +14,6 @@ header:
   - url: /blog
     title: Blog
     identifier: blog
+  - url: /presentations
+    title: Presentations
+    identifier: presentations
