Add Contributing page

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -11,6 +11,9 @@ header:
   - url: /downloads
     title: Downloads
     identifier: downloads
+  - url: /contributing
+    title: Contributing
+    identifier: contributing
   - url: /blog
     title: Blog
     identifier: blog
