Added check on author without Twitter account

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,3 +5,5 @@ paolo_patierno:
 jakub_scholz:
     name: Jakub Scholz
     twitter: https://twitter.com/scholzj
+tom_bentley:
+    name: Tom Bentley
