First set of quickstarts (OKD and minikube)

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,6 +5,9 @@ header:
   - url: /roadmap
     title: Roadmap
     identifier: roadmap
+  - url: /quickstarts
+    title: Quickstarts
+    identifier: quickstarts
   - url: /documentation
     title: Documentation
     identifier: documentation
