Preparation for 0.8.2 release

--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,8 +2,33 @@ apiVersion: v1
 entries:
   strimzi-kafka-operator:
   - apiVersion: v1
+    appVersion: 0.8.2
+    created: 2018-10-26T10:31:11.712551341+02:00
+    description: 'Strimzi: Kafka as a Service'
+    digest: 2e21d3a86d3fd6f36b259f19086b93c478da1b9e0f9dccbfaa379d87091ce457
+    home: http://strimzi.io/
+    icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
+    keywords:
+    - kafka
+    - queue
+    - stream
+    - event
+    - messaging
+    - datastore
+    - topic
+    maintainers:
+    - name: ppatierno
+    - name: scholzj
+    - name: tombentley
+    name: strimzi-kafka-operator
+    sources:
+    - https://github.com/strimzi/strimzi-kafka-operator
+    urls:
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.8.2/strimzi-kafka-operator-helm-chart-0.8.2.tgz
+    version: 0.8.2
+  - apiVersion: v1
     appVersion: 0.8.1
-    created: 2018-10-18T09:10:01.114463096+02:00
+    created: 2018-10-26T10:31:11.711883438+02:00
     description: 'Strimzi: Kafka as a Service'
     digest: 67d28bf30bad5fbae8a63c4e1bc2065c2b9fd4a88e9dec78e82ddb57d9c49a79
     home: http://strimzi.io/
@@ -101,4 +126,4 @@ entries:
     urls:
     - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.6.0/strimzi-kafka-operator-0.6.0.tgz
     version: 0.6.0
-generated: 2018-10-18T09:10:01.113183051+02:00
+generated: 2018-10-26T10:31:11.710927334+02:00
