Add Sean Glover to authors.yml

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,3 +7,6 @@ jakub_scholz:
     twitter: https://twitter.com/scholzj
 tom_bentley:
     name: Tom Bentley
+seglo:
+    name: Sean Glover
+    twitter: https://twitter.com/seg1o
