Add chris_vest to authors.yml

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,3 +10,6 @@ tom_bentley:
 seglo:
     name: Sean Glover
     twitter: https://twitter.com/seg1o
+chris_vest:
+    name: Christopher Vest
+    twitter: https://twitter.com/StringaVest
