--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,31 @@ apiVersion: v1
 entries:
   strimzi-kafka-operator:
   - apiVersion: v1
+    appVersion: 0.10.0
+    created: 2019-02-04T16:34:47.320764+01:00
+    description: 'Strimzi: Kafka as a Service'
+    digest: 42dcc3156fab7a31a72dbbc53bca137741adeca34f740f8b8dde63a1b4c695a0
+    home: http://strimzi.io/
+    icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
+    keywords:
+    - kafka
+    - queue
+    - stream
+    - event
+    - messaging
+    - datastore
+    - topic
+    maintainers:
+    - name: ppatierno
+    - name: scholzj
+    - name: tombentley
+    name: strimzi-kafka-operator
+    sources:
+    - https://github.com/strimzi/strimzi-kafka-operator
+    urls:
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.10.0/strimzi-kafka-operator-helm-chart-0.10.0.tgz
+    version: 0.10.0
+  - apiVersion: v1
     appVersion: 0.9.0
     created: 2018-12-13T19:20:03.332037+01:00
     description: 'Strimzi: Kafka as a Service'
@@ -151,4 +176,4 @@ entries:
     urls:
     - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.6.0/strimzi-kafka-operator-0.6.0.tgz
     version: 0.6.0
-generated: 2018-12-13T19:20:03.331079+01:00
+generated: 2019-02-04T16:34:47.317794+01:00
