--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 entries:
   strimzi-kafka-operator:
   - apiVersion: v1
-    appVersion: 0.11.0
-    created: 2019-02-25T14:55:34.242248+01:00
+    appVersion: 0.11.1
+    created: 2019-03-05T00:09:37.350407+01:00
     description: 'Strimzi: Kafka as a Service'
-    digest: 680b4cd985ef46008593f7ccad6cd2dcfd2194e6f24d4dcaebd19bf42cd0732c
+    digest: eb5d8fb9f8861a98c22ded2a7143597d49d2276ea55225af2564c365ad2f356d
     home: http://strimzi.io/
     icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
     keywords:
@@ -24,13 +24,38 @@ entries:
     sources:
     - https://github.com/strimzi/strimzi-kafka-operator
     urls:
-    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.11.0/strimzi-kafka-operator-helm-chart-0.11.0.tgz
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.11.1/strimzi-kafka-operator-helm-chart-0.11.1.tgz
+    version: 0.11.1
+  - apiVersion: v1
+    appVersion: 0.11.0
+    created: 2019-03-05T00:09:37.352282+01:00
+    description: 'Strimzi: Kafka as a Service'
+    digest: 8d429c9b44b2fffe14ff5f00e462934fbdaa83374d7b7221b186c4e24690ef8a
+    home: http://strimzi.io/
+    icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
+    keywords:
+    - kafka
+    - queue
+    - stream
+    - event
+    - messaging
+    - datastore
+    - topic
+    maintainers:
+    - name: ppatierno
+    - name: scholzj
+    - name: tombentley
+    name: strimzi-kafka-operator
+    sources:
+    - https://github.com/strimzi/strimzi-kafka-operator
+    urls:
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.11.1/helm-charts/strimzi-kafka-operator-0.11.0.tgz
     version: 0.11.0
   - apiVersion: v1
-    appVersion: 0.10.0
-    created: 2019-02-04T16:34:47.320764+01:00
+    appVersion: 0.11.0-rc2
+    created: 2019-02-25T14:55:34.240111+01:00
     description: 'Strimzi: Kafka as a Service'
-    digest: 42dcc3156fab7a31a72dbbc53bca137741adeca34f740f8b8dde63a1b4c695a0
+    digest: 15b5998442b02dd899820f222ed768eb9a77c52c1933b9ae5ede015f7093c8d0
     home: http://strimzi.io/
     icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
     keywords:
@@ -49,8 +74,108 @@ entries:
     sources:
     - https://github.com/strimzi/strimzi-kafka-operator
     urls:
-    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.10.0/strimzi-kafka-operator-helm-chart-0.10.0.tgz
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.11.0/strimzi-kafka-operator-helm-chart-0.11.0-rc2.tgz
+    version: 0.11.0-rc2
+  - apiVersion: v1
+    appVersion: 0.11.0-rc1
+    created: 2019-02-25T14:55:34.238231+01:00
+    description: 'Strimzi: Kafka as a Service'
+    digest: 9aa4b2298941a24fb47e0730657a254b439588a6e77c5c584e66ea876c160991
+    home: http://strimzi.io/
+    icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
+    keywords:
+    - kafka
+    - queue
+    - stream
+    - event
+    - messaging
+    - datastore
+    - topic
+    maintainers:
+    - name: ppatierno
+    - name: scholzj
+    - name: tombentley
+    name: strimzi-kafka-operator
+    sources:
+    - https://github.com/strimzi/strimzi-kafka-operator
+    urls:
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.11.0/strimzi-kafka-operator-helm-chart-0.11.0-rc1.tgz
+    version: 0.11.0-rc1
+  - apiVersion: v1
+    appVersion: 0.10.0
+    created: 2019-02-21T11:16:28.462123+01:00
+    description: 'Strimzi: Kafka as a Service'
+    digest: d172fa9e91e254e4ba2057ec70a8c047402513f585e07edce59a96fb6d59dd90
+    home: http://strimzi.io/
+    icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
+    keywords:
+    - kafka
+    - queue
+    - stream
+    - event
+    - messaging
+    - datastore
+    - topic
+    maintainers:
+    - name: ppatierno
+    - name: scholzj
+    - name: tombentley
+    name: strimzi-kafka-operator
+    sources:
+    - https://github.com/strimzi/strimzi-kafka-operator
+    urls:
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.11.0-rc1/helm-charts/strimzi-kafka-operator-0.10.0.tgz
     version: 0.10.0
+  - apiVersion: v1
+    appVersion: 0.10.0-rc2
+    created: 2019-02-04T16:34:47.319734+01:00
+    description: 'Strimzi: Kafka as a Service'
+    digest: 124a3e92fcc3fda0c3d5b51f85e2330b215c7c754cdf8803e6f0ac06b23ee69f
+    home: http://strimzi.io/
+    icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
+    keywords:
+    - kafka
+    - queue
+    - stream
+    - event
+    - messaging
+    - datastore
+    - topic
+    maintainers:
+    - name: ppatierno
+    - name: scholzj
+    - name: tombentley
+    name: strimzi-kafka-operator
+    sources:
+    - https://github.com/strimzi/strimzi-kafka-operator
+    urls:
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.10.0/strimzi-kafka-operator-helm-chart-0.10.0-rc2.tgz
+    version: 0.10.0-rc2
+  - apiVersion: v1
+    appVersion: 0.10.0-rc1
+    created: 2019-01-30T19:44:51.368224+01:00
+    description: 'Strimzi: Kafka as a Service'
+    digest: 45c3d6f4d55b15ff7a40b4101dfcd1f19c65a2f0d1c8a04662f561f95b88224a
+    home: http://strimzi.io/
+    icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
+    keywords:
+    - kafka
+    - queue
+    - stream
+    - event
+    - messaging
+    - datastore
+    - topic
+    maintainers:
+    - name: ppatierno
+    - name: scholzj
+    - name: tombentley
+    name: strimzi-kafka-operator
+    sources:
+    - https://github.com/strimzi/strimzi-kafka-operator
+    urls:
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.10.0-rc2/strimzi-kafka-operator-helm-chart-0.10.0-rc1.tgz
+    version: 0.10.0-rc1
   - apiVersion: v1
     appVersion: 0.9.0
     created: 2018-12-13T19:20:03.332037+01:00
@@ -201,4 +326,4 @@ entries:
     urls:
     - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.6.0/strimzi-kafka-operator-0.6.0.tgz
     version: 0.6.0
-generated: 2019-02-04T16:34:47.317794+01:00
+generated: 2019-03-05T00:09:37.348643+01:00
