--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,31 @@ apiVersion: v1
 entries:
   strimzi-kafka-operator:
   - apiVersion: v1
+    appVersion: 0.11.4
+    created: 2019-05-15T17:15:58.840777+02:00
+    description: 'Strimzi: Kafka as a Service'
+    digest: 58bb338054aff06dc0ebbdd13f544ec7802bb4dac8a23c32b7533bfa78c4209d
+    home: http://strimzi.io/
+    icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
+    keywords:
+    - kafka
+    - queue
+    - stream
+    - event
+    - messaging
+    - datastore
+    - topic
+    maintainers:
+    - name: ppatierno
+    - name: scholzj
+    - name: tombentley
+    name: strimzi-kafka-operator
+    sources:
+    - https://github.com/strimzi/strimzi-kafka-operator
+    urls:
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.11.4/strimzi-kafka-operator-helm-chart-0.11.4.tgz
+    version: 0.11.4
+  - apiVersion: v1
     appVersion: 0.11.3
     created: 2019-04-29T21:15:08.617707+02:00
     description: 'Strimzi: Kafka as a Service'
@@ -276,4 +301,4 @@ entries:
     urls:
     - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.6.0/strimzi-kafka-operator-0.6.0.tgz
     version: 0.6.0
-generated: 2019-04-29T21:15:08.615995+02:00
+generated: 2019-05-15T17:15:58.838931+02:00
