--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Strimzi - Apache Kafka on OpenShift and Kubernetes
+title: Strimzi - Apache Kafka on Kubernetes
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Strimzi provides a way to run an Apache Kafka cluster on OpenShift and Kubernetes in various deployment configurations.
+  Strimzi provides a way to run an Apache Kafka cluster on Kubernetes in various deployment configurations.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://strimzi.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: strimziio
