Website SEO for blog authors

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,6 +10,7 @@ tom_bentley:
 seglo:
     name: Sean Glover
     twitter: https://twitter.com/seg1o
+    website: https://seanglover.com/
 chris_vest:
     name: Christopher Vest
     twitter: https://twitter.com/StringaVest
