--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,6 +2,31 @@ apiVersion: v1
 entries:
   strimzi-kafka-operator:
   - apiVersion: v1
+    appVersion: 0.12.1
+    created: 2019-06-24T11:35:41.042200072+01:00
+    description: 'Strimzi: Kafka as a Service'
+    digest: a9e82303e02d412e4e1b5e13d2b9b2d5c6290d6411f3aa78cd7647cd617dfd89
+    home: http://strimzi.io/
+    icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
+    keywords:
+    - kafka
+    - queue
+    - stream
+    - event
+    - messaging
+    - datastore
+    - topic
+    maintainers:
+    - name: ppatierno
+    - name: scholzj
+    - name: tombentley
+    name: strimzi-kafka-operator
+    sources:
+    - https://github.com/strimzi/strimzi-kafka-operator
+    urls:
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.12.1/strimzi-kafka-operator-helm-chart-0.12.1.tgz
+    version: 0.12.1
+  - apiVersion: v1
     appVersion: 0.12.0
     created: 2019-06-14T16:28:55.590731075+01:00
     description: 'Strimzi: Kafka as a Service'
@@ -326,4 +351,4 @@ entries:
     urls:
     - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.6.0/strimzi-kafka-operator-0.6.0.tgz
     version: 0.6.0
-generated: 2019-06-14T16:28:55.588702439+01:00
+generated: 2019-06-24T11:35:41.040280826+01:00
