--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,4 +1,6 @@
 operator:
+  - version: 0.12.2
+    defaultKafkaVersion: 2.2.1
   - version: 0.12.1
     defaultKafkaVersion: 2.2.1
   - version: 0.12.0
