Update _data/authors, move Adam to citation
Signed-off-by: Kyle Liberti <kliberti@redhat.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,3 +14,5 @@ seglo:
 chris_vest:
     name: Christopher Vest
     twitter: https://twitter.com/StringaVest
+kyle_liberti:
+    name: Kyle Liberti
