Use HTTPS in all Strimzi links

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Strimzi - Apache Kafka on Kubernetes
 description: >- # this means to ignore newlines until "baseurl:"
   Strimzi provides a way to run an Apache Kafka cluster on Kubernetes in various deployment configurations.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://strimzi.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://strimzi.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: strimziio
 github_username:  strimzi
 
