CNCF Sandbox acceptance blog post
Signed-off-by: Simon Woodman <swoodman@redhat.com>

added CNCF expansion

Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,3 +16,6 @@ chris_vest:
     twitter: https://twitter.com/StringaVest
 kyle_liberti:
     name: Kyle Liberti
+strimzi_developers:
+    name: Strimzi Developers
+    twitter: https://twitter.com/strimziio
