Initial version of Knative blog post
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -19,3 +19,6 @@ kyle_liberti:
 strimzi_developers:
     name: Strimzi Developers
     twitter: https://twitter.com/strimziio
+sjwoodman:
+    name: Simon Woodman
+    twitter: https://twitter.com/sjwoodman
