--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,4 +1,6 @@
 operator:
+  - version: 0.14.0
+    defaultKafkaVersion: 2.3.0
   - version: 0.13.0
     defaultKafkaVersion: 2.3.0
   - version: 0.12.2
@@ -27,6 +29,7 @@ operator:
   - version: 0.2.0
   - version: 0.1.0
 bridge:
+  - version: 0.14.0
   - version: 0.13.0
   - version: 0.12.2
   - version: 0.12.1
