Try netlify redirects
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,9 @@ url: "https://strimzi.io" # the base hostname & protocol for your site, e.g. htt
 twitter_username: strimziio
 github_username:  strimzi
 
+# _redirects file for Netlify should be included
+include: ["_redirects"]
+
 # Build settings
 markdown: kramdown
 theme: minima
