Fix authors reference + make it show up in blog for local review
Signed-off-by: Marko Strukelj <marko.strukelj@gmail.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -22,3 +22,5 @@ strimzi_developers:
 sjwoodman:
     name: Simon Woodman
     twitter: https://twitter.com/sjwoodman
+marko_strukelj:
+    name: Marko Strukelj
