--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,4 +1,6 @@
 operator:
+  - version: 0.15.0
+    defaultKafkaVersion: 2.3.1
   - version: 0.14.0
     defaultKafkaVersion: 2.3.0
   - version: 0.13.0
@@ -29,6 +31,7 @@ operator:
   - version: 0.2.0
   - version: 0.1.0
 bridge:
+  - version: 0.15.0
   - version: 0.14.0
   - version: 0.13.0
   - version: 0.12.2
