--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,4 +1,6 @@
 operator:
+  - version: 0.16.0
+    defaultKafkaVersion: 2.4.0
   - version: 0.15.0
     defaultKafkaVersion: 2.3.1
   - version: 0.14.0
