--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,4 +1,9 @@
 operator:
+  - version: 0.16.1
+    defaultKafkaVersion: 2.4.0
+    overview_book: true
+    quickstart_book: true
+    using_book: true
   - version: 0.16.0
     defaultKafkaVersion: 2.4.0
     overview_book: true
