--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -28,9 +28,9 @@ entries:
     version: 0.16.2
   - apiVersion: v1
     appVersion: 0.16.1
-    created: "2020-01-29T21:29:36.88801+01:00"
+    created: "2020-01-23T17:40:00.679844458+01:00"
     description: 'Strimzi: Apache Kafka running on Kubernetes'
-    digest: 808384c3f999f1235e810022415cc0e463cceb35905be67efbdac9fcfd28533c
+    digest: 29e14d47a0d4ab62687a919712358443c22fce8e36cb1aa59e52a1737b8aba9a
     home: https://strimzi.io/
     icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
     keywords:
@@ -49,11 +49,11 @@ entries:
     sources:
     - https://github.com/strimzi/strimzi-kafka-operator
     urls:
-    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.16.2/helm-charts/strimzi-kafka-operator-0.16.1.tgz
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.16.1/strimzi-kafka-operator-helm-chart-0.16.1.tgz
     version: 0.16.1
   - apiVersion: v1
     appVersion: 0.16.0
-    created: "2020-01-29T21:29:36.883226+01:00"
+    created: "2020-01-16T21:50:36.18063+01:00"
     description: 'Strimzi: Apache Kafka running on Kubernetes'
     digest: 0ae2d41bfd5c79b50b89fcdbfab6c53a7a8f810d4a994ba07b916c3d07943802
     home: https://strimzi.io/
@@ -74,7 +74,7 @@ entries:
     sources:
     - https://github.com/strimzi/strimzi-kafka-operator
     urls:
-    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.16.2/strimzi-kafka-operator-helm-chart-0.16.0.tgz
+    - https://github.com/strimzi/strimzi-kafka-operator/releases/download/0.16.0/strimzi-kafka-operator-helm-chart-0.16.0.tgz
     version: 0.16.0
   - apiVersion: v1
     appVersion: 0.15.0
