Added 0.15.2 release documentation
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -118,6 +118,7 @@ operator:
     quickstart_book: false
     using_book: true
 bridge:
+  - version: 0.15.2
   - version: 0.15.1
   - version: 0.15.0
   - version: 0.14.0
