add name to authors
Signed-off-by: prmellor <pmellor@redhat.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,3 +24,5 @@ sjwoodman:
     twitter: https://twitter.com/sjwoodman
 marko_strukelj:
     name: Marko Strukelj
+paul_mellor:
+    name: Paul Mellor
