Add talk from DevConf.CZ 2020 about Kafka, Camel and Strimzi connector operator to presentations
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_data/presentations.yaml
+++ b/_data/presentations.yaml
@@ -1,4 +1,9 @@
 strimzi_presentations:
+ - name: "Metamorphosis: When Kafka meets Camel"
+   info: DevConf.CZ 2020
+   slides_url: http://jsch.cz/metamorphosis
+   video_url: https://www.youtube.com/watch?v=hJUl7R2dN00
+   demo_url: https://github.com/scholzj/devconf-2020-metamorphosis-when-kafka-meets-camel
  - name: "Strimzi: Distributed Streaming with Apache Kafka in Kubernetes"
    info: Istanbul JUG Meetup, July 2019
    slides_url: https://speakerdeck.com/mabulgu/strimzi-distributed-streaming-with-apache-kafka-in-kubernetes
