--- a/_data/presentations.yaml
+++ b/_data/presentations.yaml
@@ -1,7 +1,7 @@
 strimzi_presentations:
  - name: "Metamorphosis: When Kafka meets Camel"
    info: DevConf.CZ 2020
-   slides_url: http://jsch.cz/metamorphosis
+   slides_url: https://docs.google.com/presentation/d/1K_VzElsSjEqT5t-FIE64_QLd1hIWJpXp_AmRwMfmcp8/edit?usp=sharing
    video_url: https://www.youtube.com/watch?v=hJUl7R2dN00
    demo_url: https://github.com/scholzj/devconf-2020-metamorphosis-when-kafka-meets-camel
  - name: "Strimzi: Distributed Streaming with Apache Kafka in Kubernetes"
