Added card for Jakub's introduction to Strimzi video
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_data/presentations.yaml
+++ b/_data/presentations.yaml
@@ -1,4 +1,7 @@
 strimzi_presentations:
+ - name: "Develop Apache Kafka applications with Strimzi and Minikube"
+   info: Learn how to get started with Strimzi on Minikube
+   video_url: https://www.youtube.com/watch?v=4bKSPrENDQQ
  - name: "Metamorphosis: When Kafka meets Camel"
    info: DevConf.CZ 2020
    slides_url: https://docs.google.com/presentation/d/1K_VzElsSjEqT5t-FIE64_QLd1hIWJpXp_AmRwMfmcp8/edit?usp=sharing
