--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -5,148 +5,176 @@ operator:
     quickstart_book: true
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.16.2
     defaultKafkaVersion: 2.4.0
     overview_book: true
     quickstart_book: true
     using_book: true
+    directory_layout: layout1
   - version: 0.16.1
     defaultKafkaVersion: 2.4.0
     overview_book: true
     quickstart_book: true
     using_book: true
+    directory_layout: layout1
   - version: 0.16.0
     defaultKafkaVersion: 2.4.0
     overview_book: true
     quickstart_book: true
     using_book: true
+    directory_layout: layout1
   - version: 0.15.0
     defaultKafkaVersion: 2.3.1
     overview_book: false
     quickstart_book: true
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.14.0
     defaultKafkaVersion: 2.3.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.13.0
     defaultKafkaVersion: 2.3.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.12.2
     defaultKafkaVersion: 2.2.1
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.12.1
     defaultKafkaVersion: 2.2.1
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.12.0
     defaultKafkaVersion: 2.2.1
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.11.4
     defaultKafkaVersion: 2.1.1
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.11.3
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.11.2
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.11.1
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.11.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.10.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.9.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.8.2
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.8.1
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.8.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.7.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.6.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.5.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.4.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.3.1
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.3.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.2.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout1
   - version: 0.1.0
     overview_book: false
     quickstart_book: false
     using_book: true
     deploying_book: false
+    directory_layout: layout0
 bridge:
   - version: 0.15.2
   - version: 0.15.1
