--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -176,6 +176,7 @@ operator:
     deploying_book: false
     directory_layout: layout0
 bridge:
+  - version: 0.16.0
   - version: 0.15.2
   - version: 0.15.1
   - version: 0.15.0
