--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -4,7 +4,7 @@ operator:
     overview_book: true
     quickstart_book: true
     using_book: true
-    deploying_book: false
+    deploying_book: true
     directory_layout: layout2
   - version: 0.17.0
     defaultKafkaVersion: 2.4.0
