Added Cruise Control support post
Signed-off-by: Thomas Cooper <tom.n.cooper@gmail.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -26,3 +26,8 @@ marko_strukelj:
     name: Marko Strukelj
 paul_mellor:
     name: Paul Mellor
+tom_cooper:
+    name: Tom Cooper
+    twitter: https://twitter.com/tomncooper
+    github: tomncooper
+    website: https://www.tomcooper.org.uk/
