Added documentation for Kafka Bridge release 0.18.0
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -183,6 +183,7 @@ operator:
     deploying_book: false
     directory_layout: layout0
 bridge:
+  - version: 0.18.0
   - version: 0.17.0
   - version: 0.16.0
   - version: 0.15.2
