--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -31,3 +31,7 @@ tom_cooper:
     twitter: https://twitter.com/tomncooper
     github: tomncooper
     website: https://www.tomcooper.org.uk/
+maros_orsak:
+    name: Maros Orsak
+    github: see-quick
+    linkedin: https://www.linkedin.com/in/majkl-orsak/
