[MO] - [blog post] -> introduction to system tests (#187)
* [MO] - [blog post] -> introduction to system tests

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

* commends

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

* typos

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

* changes

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

* paul-commneds

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

* Toms commends

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

* last

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

* Paul comments

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

* jakub commends

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

* [MO] - date

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

* typo

Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -31,3 +31,6 @@ tom_cooper:
     twitter: https://twitter.com/tomncooper
     github: tomncooper
     website: https://www.tomcooper.org.uk/
+maros_orsak:
+    name: Maros Orsak
+    github: see-quick
