incorporated feedback and other improvements
Signed-off-by: abhishek <abhirockzz@gmail.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,36 +1,40 @@
 # Author details.
 paolo_patierno:
-    name: Paolo Patierno
-    twitter: https://twitter.com/ppatierno
+  name: Paolo Patierno
+  twitter: https://twitter.com/ppatierno
 jakub_scholz:
-    name: Jakub Scholz
-    twitter: https://twitter.com/scholzj
+  name: Jakub Scholz
+  twitter: https://twitter.com/scholzj
 tom_bentley:
-    name: Tom Bentley
+  name: Tom Bentley
 seglo:
-    name: Sean Glover
-    twitter: https://twitter.com/seg1o
-    website: https://seanglover.com/
+  name: Sean Glover
+  twitter: https://twitter.com/seg1o
+  website: https://seanglover.com/
 chris_vest:
-    name: Christopher Vest
-    twitter: https://twitter.com/StringaVest
+  name: Christopher Vest
+  twitter: https://twitter.com/StringaVest
 kyle_liberti:
-    name: Kyle Liberti
+  name: Kyle Liberti
 strimzi_developers:
-    name: Strimzi Developers
-    twitter: https://twitter.com/strimziio
+  name: Strimzi Developers
+  twitter: https://twitter.com/strimziio
 sjwoodman:
-    name: Simon Woodman
-    twitter: https://twitter.com/sjwoodman
+  name: Simon Woodman
+  twitter: https://twitter.com/sjwoodman
 marko_strukelj:
-    name: Marko Strukelj
+  name: Marko Strukelj
 paul_mellor:
-    name: Paul Mellor
+  name: Paul Mellor
 tom_cooper:
-    name: Tom Cooper
-    twitter: https://twitter.com/tomncooper
-    github: tomncooper
-    website: https://www.tomcooper.org.uk/
+  name: Tom Cooper
+  twitter: https://twitter.com/tomncooper
+  github: tomncooper
+  website: https://www.tomcooper.org.uk/
 maros_orsak:
-    name: Maros Orsak
-    github: see-quick
+  name: Maros Orsak
+  github: see-quick
+abhishek:
+  name: Abhishek Gupta
+  twitter: https://twitter.com/abhi_tweeter
+  github: abhirockzz
