--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,4 +1,11 @@
 operator:
+  - version: 0.20.0
+    defaultKafkaVersion: 2.6.0
+    overview_book: true
+    quickstart_book: true
+    using_book: true
+    deploying_book: true
+    directory_layout: layout2
   - version: 0.19.0
     defaultKafkaVersion: 2.5.0
     overview_book: true
