Dynamic logging blogpost
Signed-off-by: Stanislav Knot <sknot@redhat.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -31,6 +31,8 @@ tom_cooper:
   twitter: https://twitter.com/tomncooper
   github: tomncooper
   website: https://www.tomcooper.org.uk/
+stanislav_knot:
+  name: Stanislav Knot
 maros_orsak:
   name: Maros Orsak
   github: see-quick
