Added DevDay.be 2020 presentation
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_data/presentations.yaml
+++ b/_data/presentations.yaml
@@ -1,4 +1,9 @@
 strimzi_presentations:
+ - name: "Strimzi: running your Apache Kafka cluster on Kubernetes"
+   info: DevDay.be 2020
+   video_url: https://www.youtube.com/watch?v=RyJqt139I94&feature=youtu.be&t=17066
+   slides_url: https://www2.slideshare.net/paolopat/strimzi-running-your-apache-kafka-cluster-on-kubernetes
+   demo_url: https://github.com/ppatierno/devday-2020-strimzi-aks-eventhub
  - name: "Develop Apache Kafka applications with Strimzi and Minikube"
    info: Learn how to get started with Strimzi on Minikube
    video_url: https://www.youtube.com/watch?v=4bKSPrENDQQ
