Add Strimzi 0.20.1 to the website
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,4 +1,15 @@
 operator:
+  - version: 0.20.1
+    defaultKafkaVersion: 2.6.0
+    bridgeVersion: 0.19.0
+    oAuthVersion: 0.6.1
+    kafkaVersions: 2.5.0, 2.5.1, 2.6.0
+    kubernetesVersions: 1.11+
+    overview_book: true
+    quickstart_book: true
+    using_book: true
+    deploying_book: true
+    directory_layout: layout2
   - version: 0.20.0
     defaultKafkaVersion: 2.6.0
     bridgeVersion: 0.19.0
