Add forgotten 2.6.1 to releases YAML
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -3,7 +3,7 @@ operator:
     defaultKafkaVersion: 2.7.0
     bridgeVersion: 0.19.0
     oAuthVersion: 0.7.1
-    kafkaVersions: 2.5.0, 2.5.1, 2.6.0, 2.7.0
+    kafkaVersions: 2.5.0, 2.5.1, 2.6.0, 2.6.1, 2.7.0
     kubernetesVersions: 1.16+
     overview_book: true
     quickstart_book: true
