fixup! fixup! preview
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -40,3 +40,6 @@ abhishek:
   name: Abhishek Gupta
   twitter: https://twitter.com/abhi_tweeter
   github: abhirockzz
+jakub_stejskal:
+  name: Jakub Stejskal
+  github: Frawless
