--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -311,6 +311,7 @@ operator:
     deploying_book: false
     directory_layout: layout0
 bridge:
+  - version: 0.20.0
   - version: 0.19.0
   - version: 0.18.0
   - version: 0.17.0
