Add Operators 0.24.0 and Bridge 0.20.1 to the website
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,4 +1,15 @@
 operator:
+  - version: 0.24.0
+    defaultKafkaVersion: 2.8.0
+    bridgeVersion: 0.20.1
+    oAuthVersion: 0.8.1
+    kafkaVersions: 2.7.0, 2.7.1, 2.8.0
+    kubernetesVersions: 1.16+
+    overview_book: true
+    quickstart_book: true
+    using_book: true
+    deploying_book: true
+    directory_layout: layout2
   - version: 0.23.0
     defaultKafkaVersion: 2.8.0
     bridgeVersion: 0.19.0
@@ -311,6 +322,7 @@ operator:
     deploying_book: false
     directory_layout: layout0
 bridge:
+  - version: 0.20.1
   - version: 0.20.0
   - version: 0.19.0
   - version: 0.18.0
