Add blog post about Drain Cleaner component
Signed-off-by: Federico Valeri <fedevaleri@gmail.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -44,3 +44,6 @@ jakub_stejskal:
   name: Jakub Stejskal
   github: Frawless
   twitter: https://twitter.com/MrFrawless
+federico_valeri:
+  name: Federico Valeri
+  github: fvaleri
