Add Strimzi Bridge 0.20.2 to the website
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -322,6 +322,7 @@ operator:
     deploying_book: false
     directory_layout: layout0
 bridge:
+  - version: 0.20.2
   - version: 0.20.1
   - version: 0.20.0
   - version: 0.19.0
