applied suggestions made by Paul
Signed-off-by: ShubhamRwt <srawat@redhat.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -44,3 +44,6 @@ jakub_stejskal:
   name: Jakub Stejskal
   github: Frawless
   twitter: https://twitter.com/MrFrawless
+shubham_rawat:
+  name: Shubham Rawat
+  github: ShubhamRwt
