--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -333,6 +333,7 @@ operator:
     deploying_book: false
     directory_layout: layout0
 bridge:
+  - version: 0.20.3
   - version: 0.20.2
   - version: 0.20.1
   - version: 0.20.0
