:passport_control: New authors: Roman and Manuel
Signed-off-by: Roman Martin <rmarting@redhat.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -47,3 +47,10 @@ jakub_stejskal:
 federico_valeri:
   name: Federico Valeri
   github: fvaleri
+roman_martin:
+  name: Roman Martin
+  github: rmarting
+  twitter: https://twitter.com/jromanmartin
+manuel_Schindler:
+  name: Manuel Schindler
+  github: maschind
