:adhesive_bandage: New authors list
Signed-off-by: Roman Martin <rmarting@redhat.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -54,3 +54,5 @@ roman_martin:
 manuel_Schindler:
   name: Manuel Schindler
   github: maschind
+roman_martin_manuel_schindler:
+  name: Roman Martin, Manuel Schindler
