:pencil2: Fixed name item
Signed-off-by: Roman Martin <rmarting@redhat.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -51,7 +51,7 @@ roman_martin:
   name: Roman Martin
   github: rmarting
   twitter: https://twitter.com/jromanmartin
-manuel_Schindler:
+manuel_schindler:
   name: Manuel Schindler
   github: maschind
 roman_martin_manuel_schindler:
