New post "Migrating kafka with MirrorMaker2" (#265)
* :passport_control: New authors: Roman and Manuel

Signed-off-by: Roman Martin <rmarting@redhat.com>

* :sparkles: Added Migrating Kafka with MM2

Signed-off-by: Roman Martin <rmarting@redhat.com>

* :adhesive_bandage: Rebranded to Strimzi and formatted structure

Signed-off-by: Roman Martin <rmarting@redhat.com>

* :adhesive_bandage: New authors list

Signed-off-by: Roman Martin <rmarting@redhat.com>

* :pencil2: Fixed name item

Signed-off-by: Roman Martin <rmarting@redhat.com>

* :pencil2: Fixed name

Signed-off-by: Roman Martin <rmarting@redhat.com>

* :adhesive_bandage: Added feedback

Signed-off-by: Roman Martin <rmarting@redhat.com>

* :adhesive_bandage: Minor changes

Signed-off-by: Roman Martin <rmarting@redhat.com>

* :pencil2: Setted same date and filename

Signed-off-by: Roman Martin <rmarting@redhat.com>

* Update date

Signed-off-by: Jakub Scholz <www@scholzj.com>

Co-authored-by: Jakub Scholz <www@scholzj.com>

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -47,3 +47,12 @@ jakub_stejskal:
 federico_valeri:
   name: Federico Valeri
   github: fvaleri
+roman_martin:
+  name: Roman Martin
+  github: rmarting
+  twitter: https://twitter.com/jromanmartin
+manuel_schindler:
+  name: Manuel Schindler
+  github: maschind
+roman_martin_manuel_schindler:
+  name: Roman Martin, Manuel Schindler
