--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -355,6 +355,7 @@ operator:
     deploying_book: false
     directory_layout: layout0
 bridge:
+  - version: 0.21.2
   - version: 0.21.1
   - version: 0.21.0
   - version: 0.20.3
