--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -1,4 +1,15 @@
 operator:
+  - version: 0.27.0
+    defaultKafkaVersion: 3.0.0
+    bridgeVersion: 0.21.2
+    oAuthVersion: 0.9.0
+    kafkaVersions: 2.8.0, 2.8.1, 3.0.0
+    kubernetesVersions: 1.16+
+    overview_book: true
+    quickstart_book: true
+    using_book: true
+    deploying_book: true
+    directory_layout: layout2
   - version: 0.26.1
     defaultKafkaVersion: 3.0.0
     bridgeVersion: 0.21.0
