--- a/_data/releases.yaml
+++ b/_data/releases.yaml
@@ -377,6 +377,7 @@ operator:
     deploying_book: false
     directory_layout: layout0
 bridge:
+  - version: 0.21.4
   - version: 0.21.3
   - version: 0.21.2
   - version: 0.21.1
