Add some of my presentations, videos and conference talks to the Strimzi website
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_data/presentations.yaml
+++ b/_data/presentations.yaml
@@ -1,4 +1,46 @@
 strimzi_presentations:
+ - name: Build your own social media analytics with Apache
+   info: DevConf.CZ 2022
+   video_url: https://youtu.be/bTxdZOWLyvI
+   slides_url: https://docs.google.com/presentation/d/1vW_oTDelloUPyTkbDLiNluZXIi5t0wfFWSIDnKapESc/edit?usp=sharing
+   demo_url: https://github.com/scholzj/build-your-own-social-media-analytics-with-apache-kafka
+ - name: "Make your Kafka cluster production-ready: How many disks do I need?"
+   info: Video series episode
+   video_url: https://youtu.be/7gaOUjkuR68
+ - name: What’s new in Strimzi
+   info: Video series
+   video_url: https://www.youtube.com/playlist?list=PLpI4X8PMthYfPzqsgRyv66YvPoIzXp_WY
+   demo_url: https://github.com/scholzj/what-is-new-in-strimzi
+ - name: Apache Kafka as a Monitoring Data Pipeline
+   info: DevConf.CZ 2021
+   video_url: https://youtu.be/BcpS_6yC1S0
+   slides_url: https://docs.google.com/presentation/d/1-U5D-7yAeQT2ndEJ5Ko_IfkgvkCcCueukmI8N9ppyP0/edit?usp=sharing
+   demo_url: https://github.com/scholzj/demo-devconfcz-2021-apache-kafka-as-a-monitoring-data-pipeline
+ - name: "Make your Kafka cluster production-ready: Reliability"
+   info: Video series episode
+   video_url: https://youtu.be/xyfL0IUCLsg
+ - name: "Make your Kafka cluster production-ready: Dedicated Nodes and Affinity"
+   info: Video series episode
+   video_url: https://youtu.be/u1n9rg7pELo
+ - name: "Make your Kafka cluster production-ready: Resources"
+   info: Video series episode
+   video_url: https://youtu.be/xIEl0V1yMjc
+ - name: "Make your Kafka cluster production-ready: Rack-awareness"
+   info: Video series episode
+   video_url: https://youtu.be/CNruf97Vyxg
+ - name: "Make your Kafka cluster production-ready: Storage"
+   info: Video series episode
+   video_url: https://youtu.be/WRkj7dcrvmU
+ - name: "Make your Kafka cluster production-ready: Introduction"
+   info: Video series episode
+   video_url: https://youtu.be/WkQYTJv6pJo
+ - name: "Kafka Connect Build: Declarative management of connector plugins in Kafka Connect"
+   info: YouTube video
+   video_url: https://youtu.be/nEhksvkFMho
+ - name: Machine Learning processing pipeline on Kubernetes with Strimzi and Apache Kafka
+   info: YouTube video
+   video_url: https://youtu.be/CemgJcJMufI
+   demo_url: https://github.com/scholzj/demo-kafka-strimzi-telegram-ml
  - name: "Strimzi: running your Apache Kafka cluster on Kubernetes"
    info: DevDay.be 2020
    video_url: https://www.youtube.com/watch?v=RyJqt139I94&feature=youtu.be&t=17066
