Added some more sessions
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_data/presentations.yaml
+++ b/_data/presentations.yaml
@@ -11,11 +11,24 @@ strimzi_presentations:
    info: Video series
    video_url: https://www.youtube.com/playlist?list=PLpI4X8PMthYfPzqsgRyv66YvPoIzXp_WY
    demo_url: https://github.com/scholzj/what-is-new-in-strimzi
+ - name: "Operate Kubernetes workloads: extend the platform with the operator pattern!"
+   info: CloudGen 2021
+   video_url: https://www.youtube.com/watch?v=JCJvZ5xt1BY
+   slides_url: https://www.slideshare.net/paolopat/operate-kubernetes-workloads-extend-the-platform-with-the-operator-pattern  
+ - name: "Finding a Work-Load Balance: Cruise Control for Kafka on Kubernetes"
+   info: OpenShift Commons
+   video_url: https://www.youtube.com/watch?v=Ox11Wo1RANI
+   slides_url: https://www.slideshare.net/paolopat/finding-a-workload-balance-cruise-control-for-kafka-on-kubernetes
  - name: Apache Kafka as a Monitoring Data Pipeline
    info: DevConf.CZ 2021
    video_url: https://youtu.be/BcpS_6yC1S0
    slides_url: https://docs.google.com/presentation/d/1-U5D-7yAeQT2ndEJ5Ko_IfkgvkCcCueukmI8N9ppyP0/edit?usp=sharing
    demo_url: https://github.com/scholzj/demo-devconfcz-2021-apache-kafka-as-a-monitoring-data-pipeline
+ - name: Formula 1 telemetry processing using Kafka Streams
+   info: DevConf.CZ 2021
+   video_url: https://www.youtube.com/watch?v=OkXlSb4vfDk
+   slides_url: https://www.slideshare.net/paolopat/formula-1-telemetry-processing-using-kafka-streams
+   demo_url: https://github.com/ppatierno/devconfcz-2021-formula1-kafka-streams
  - name: "Make your Kafka cluster production-ready: Reliability"
    info: Video series episode
    video_url: https://youtu.be/xyfL0IUCLsg
