Add it also to the presentations list
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_data/presentations.yaml
+++ b/_data/presentations.yaml
@@ -1,4 +1,7 @@
 strimzi_presentations:
+ - name: StrimziPodSets - What it is and why should you care?
+   info: YouTube video
+   video_url: https://youtu.be/iSwrn1Gumx4
  - name: Build your own social media analytics with Apache
    info: DevConf.CZ 2022
    video_url: https://youtu.be/bTxdZOWLyvI
